# swerve_vehicle_descriptors

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-plz.toml  renovate.json
.github/workflows/: README.md  ci.yml  docs.yml  find_mutants_in_pr.yml  lint.yml  lint_pr.yml  release-plz.yml  to_kanban.yml
benches/: README.md  model.rs  number_space.rs
docs/: README.md
examples/: README.md
src/: change_notification_processing.rs  change_notification_processing_tests.rs  hardware.rs  lib.rs  message_processing.rs  message_processing_tests.rs  model_elements.rs  number_space.rs  number_space_tests.rs
src/hardware/: actuator_interface.rs  actuator_interface_tests.rs  joint_state.rs  joint_state_tests.rs  sensor_interface.rs
src/model_elements/: frame_elements.rs  frame_elements_tests.rs  model.rs  model_tests.rs
tests/: README.md
