[package]
name = "swerve_vehicle_descriptors"
version = "0.1.0"
edition = "2021"
authors = ["Patrick van der Velde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.13"
float-cmp = "0.9.0"
nalgebra = "0.33.0"
thiserror = "1.0.61"
